--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,8 @@
 				"--nolazy"
 			],
 			"env": {
-				"NODE_ENV": "development"
+				"NODE_ENV": "development",
+        "SLACK_CHANNEL": ""
 			},
 			"externalConsole": false,
 			"sourceMaps": false,
